--- a/client/package.json
+++ b/client/package.json
@@ -10,8 +10,9 @@
     "type-check": "vue-tsc --noEmit -p tsconfig.app.json --composite false"
   },
   "dependencies": {
-    "bulma":"^0.9.4",
     "@fortawesome/fontawesome-free": "^5.15.4",
+    "bulma": "^0.9.4",
+    "node-sass": "^9.0.0",
     "vue": "^3.3.4",
     "vue-router": "^4.2.4"
   },
