--- a/client/package.json
+++ b/client/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@fortawesome/fontawesome-free": "^5.15.4",
+    "vue-toastification": "2.0.0-rc.5",
     "bulma": "^0.9.4",
     "node-sass": "^9.0.0",
     "vue": "^3.3.4",
