--- a/package.json
+++ b/package.json
@@ -1,19 +1,23 @@
 {
-  "name": "class-work",
+  "name": "fall-2023",
   "version": "1.0.0",
   "description": "",
   "author": "",
   "license": "ISC",
 
   "scripts": {
-    "build": "npm i --production && cd client && npm i && npm run build && cd ..",
+    "build": "npm i --production && cd client && npm i && npm run build",
     "start": "node server/index.js",
     "dev": "nodemon --watch ./server server/index.js"
   },
   "dependencies": {
-    "express": "^4.18.2"
+    "express": "^4.17.20",
+    "dotenv": "^16.3.1",
+    "mongodb": "^6.2.0"
   },
   "devDependencies": {
+    "@types/node": "20.8.9",
+    "@types/express": "^4.17.20",
     "nodemon": "^3.0.1"
   }
 
