--- a/react/package.json
+++ b/react/package.json
@@ -10,7 +10,11 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-free": "^5.15.4",
+    "bulma": "^0.9.4",
     "react": "^18.2.0",
+    "react-router-dom":"^6.20.1",
+    "react-toastify": "^9.1.3",
     "react-dom": "^18.2.0"
   },
   "devDependencies": {
